# lox-ocaml

./: README.md  TODO.md  dune-project  lox_ocaml.opam
lib/: ast.ml  dune  entrypoint.ml  entrypoint.mli  env.ml  env.mli  interpreter.ml  interpreter.mli  literal.ml  token.ml  util.ml
lib/analysis/: analysis.ml  dune
lib/evaluation/: dune  evaluation.ml  evaluation.mli
lib/interpreter/: dune  interpreter.ml  interpreter.mli
lib/parser/: dune  parser.ml  parser.mli
lib/parsing/: dune  parsing.ml  parsing.mli
lib/scanner/: dune  scanner.ml  scanner.mli
lib/scanning/: dune  scanning.ml  scanning.mli
test/: dune  test_ast.ml  test_evaluation.ml  test_parser.ml  test_parsing.ml  test_scanner.ml  test_scanning.ml
