(library
 (name entrypoint)
 (modules entrypoint)
 (libraries interpreter ast))

(library
 (name token)
 (modules token)
 (preprocess
   (pps ppx_deriving.show ppx_deriving.eq)))

(library
  (name util)
  (modules util))

(library
  (name ast)
  (modules ast)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.eq)))
