(test
  (name test_scanning)
  (modules test_scanning)
  (libraries alcotest scanning))

(test
  (name test_ast)
  (modules test_ast)
  (libraries alcotest ast))

(test
  (name test_parsing)
  (modules test_parsing)
  (libraries str alcotest ast parsing))

(test
  (name test_evaluation)
  (modules test_evaluation)
  (libraries alcotest ast evaluation interpreter))
